# DVDRentalSystem

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.host-db.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: actors.py  auth.py  customers.py  films.py  inventory.py  payments.py  reference.py  rentals.py  router.py
app/core/: __init__.py  config.py  database.py  security.py
app/exceptions/: handlers.py
app/models/: __init__.py  models.py
app/schemas/: __init__.py  base.py  catalog.py  film.py  geography.py  people.py  transactions.py
app/services/: __init__.py  actor_service.py  base.py  customer_service.py  film_service.py  inventory_service.py  rental_service.py
docker/initdb/: 00_create_keycloak_db.sql
docker/keycloak/: dvd-rental-realm.json
tests/: conftest.py  test_api.py
