# ── Build system ────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ─────────────────────────────────────────────────────────
[project]
name = "dvdrental-api"
version = "1.0.0"
description = "Production-ready REST API for the DVD Rental System. Built with FastAPI + SQLAlchemy 2.x async."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "IceRiverDev" }]
requires-python = ">=3.11"
keywords = ["fastapi", "dvd-rental", "rest-api", "postgresql", "keycloak", "oidc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

# Runtime dependencies (mirrors requirements.txt)
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "uvicorn[standard]>=0.34.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
]

# Dev / test dependencies  →  pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.urls]
Homepage   = "https://github.com/IceRiverDev/DVDRentalSystem"
Repository = "https://github.com/IceRiverDev/DVDRentalSystem"

# ── Hatch build config ───────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["B008"]   # FastAPI Depends() calls in function defaults are intentional

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version          = "3.11"
strict                  = false
ignore_missing_imports  = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode                       = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope    = "session"
testpaths                          = ["tests"]

[tool.anyio]
backends = ["asyncio"]
